--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
   "author": "colorlib",
   "license": "CC-BY-3.0",
   "devDependencies": {
-    "gulp": "^3.9.1",
+    "gulp": "^5.0.0",
     "gulp-concat": "^2.6.1"
   },
   "dependencies": {
-    "bootstrap": "^4.2.1",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "counterup": "^1.0.2",
     "elegant-icons": "0.0.1",
     "font-awesome": "^4.7.0",
     "imagesloaded": "^4.1.4",
     "isotope-layout": "^3.0.6",
     "jarallax": "^1.10.6",
-    "jquery": "^2.2.4",
+    "jquery": "^3.7.1",
     "jquery-countdown": "^2.2.0",
     "jquery-waypoints": "^2.0.5",
     "jquery.easing": "^1.4.1",
